# gridmet-etl

./: .gitignore  README.md  cfsv2_ensemble_header.md  cfsv2_median_header.md  environment.yml  gm_header.md  pyproject.toml
data/: .gitignore
data/nhru_01a/: cfsv2_nhru01a_weights.csv  gm_nhru01_weights.csv
gridmet_etl/: Gridmet_current.py  cli.py  etl.py  helper.py
gridmet_etl/data/: cfsv2.json
